fixed navbar sizing/color on mobile screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+@media (max-width: 992px) {
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+
+  .nav-item.nav-link {
+    color: black !important;
+  }
+  
+  .main-col-pt {
+    margin-top: 236px;
+  }
+}
+
+
 main {
     min-height: 25vh;
 }
